--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header {
   max-width: 100%;
   height: 80px;
   display: flex;
-  justify-content: center
+  justify-content: center;
   align-items: center;
   align-content: center;
   
