--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* stylelint-disable Invalid value for `height`                                     csstree/validator */
 * {
   margin: 0;
   padding: 0;
@@ -95,6 +94,7 @@ header {
 
 .main {
   height: fit-content;
+  /* stylelint-disable-next-line */
   width: 100%;
   background-image: url("Images/chogum.jpg");
   background-attachment: local;
@@ -141,6 +141,7 @@ h6 {
   line-height: 1.1;
   font-size: 5vw;
   -webkit-background-clip: text;
+  /* stylelint-disable-next-line */
 	background-clip: text;
   background-image: url("Images/CBF1.jpg");
   background-attachment: local;
@@ -177,6 +178,7 @@ h6 {
 }
 
 .program {
+  /* stylelint-disable-next-line */
   height: fit-content;
   width: 100%;
   background-image: url("Images/CBF1.jpg");
@@ -443,6 +445,7 @@ footer {
   }
 
   .program {
+    /* stylelint-disable-next-line */
     height: fit-content;
     width: 100%;
     background-image: url("Images/CBF1.jpg");
@@ -461,6 +464,7 @@ footer {
 
   .program-list {
     width: 100%;
+    /* stylelint-disable-next-line */
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -556,10 +560,13 @@ footer {
 
   @keyframes menu {
     from {
-      width: 0%; opacity: 0.3;
+      width: 0%;
+      opacity: 0.3;
     }
+
     to {
-      width: 100%; opacity: 1;
+      width: 100%;
+      opacity: 1;
     }
   }
 
@@ -598,6 +605,7 @@ footer {
 
   .login {
     display: flex;
+    /* stylelint-disable-next-line */
     height: fit-content;
     width: 25%;
     border: #ec534250;
